# dns-exfil-detector

./: .gitignore  README.md  pyproject.toml
docs/: week1_findings.md
notebooks/: 01_eda.ipynb
scripts/: build_eda_notebook.py  verify_dataset.py
src/dns_exfil/: __init__.py
src/dns_exfil/data/: __init__.py  loader.py
tests/: test_loader.py
